# prj.translate

./: .config.env  .gitignore  .gitmodules  .postactivate  .postmkproject  Makefile  README.md  activate.sh  functions.py  normalize-dictionary.py  parser-demo.py  pyproject.toml  standalone  workhere  workonthis
.vwrap/: postactivate  postmkproject
config/: requirements.txt
configure/: activate.sh  requirements.txt
demos/: demo1  demo2  demo3
dev/: conftest.py  tests.py
dev.passage/: conftest.py
dev.passage/_here/: __init__.py
dev/__here__.data/: TheTitle.src
dev/_regtest_outputs/: tests.test_MODFIX_TEMP.out
lib/: blips.py  couplet.py  demo-dictionary.py  dictionary.py  ezrun.py  functions.py  parser-demo.py
lib/dev/: functions.py
lib/prj/: blips.py  util.py
project/: conftest.py
project/dev/: BUGDEMO_test.py  conftest.py  dictionary_test.py  test_demo-dictionary.py  test_dictionary.py  test_functions.py
project/dev.passage/: demo-dictionary_test.py
project/hack/: test.py  unit.py
sample/: passage.txt
setup/hide/: enter
src/hack/: environ.py
test/: test.sh
test_dev/: __here__.py  constants.py  misc_test.py  stuff.py  test_fixturehack.py  test_x4rip.py
test_dev/_conftest/: __init__.py  doc.txt
test_main/: demo-dictionary_test.py  functions_test.py
tests/: Makefile  __util.py  _formatter.py  conftest.py  demo-dictionary_test.py  dictionary_test.py  functions_test.py  new_test.py  test.sh  test_modulule_normalize_dict.py  test_root_lib_functions.py  wbparse_test.py
wordbook/: dictionary.py  shell.py  wbparser.py
(+102 files in other folders)
