[tool.poetry]
name = "wordbook"
version = "0.1.0"
description = ""
authors = ["Bryan Hann <nobody@nowhere>"]

[tool.poetry.scripts]
wbparse = 'wordbook.shell:wbparse'

[tool.poetry.dependencies]
python = ">=3.6"
pytest = "^6.2.1"
pytest-regtest = "^1.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
